<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/app_background"
    tools:context="com.rahulgupta.myappportfolio.MainActivity">

    <Button

        android:theme="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/btn_popular_movie"
        android:layout_below="@+id/tv_header"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="20dp" />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/btn_stock_hawk"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_popular_movie"
        />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:onClick="onClick"
        android:id="@+id/btn_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_stock_hawk"
        />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/btn_make_your_app_material"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_below="@+id/btn_build_it_bigger" />

    <Button
        android:theme="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/btn_go_ubiquitous"
        android:onClick="onClick"
        android:layout_below="@+id/btn_make_your_app_material"
        android:layout_centerHorizontal="true" />

    <Button
        android:theme="@style/CapstoneTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/btn_capstone"
        android:onClick="onClick"
        android:layout_below="@+id/btn_go_ubiquitous"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nenodegree_apps"
        android:id="@+id/tv_header"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
